@@ -156,6 +156,9 @@ GC_ALL_INTERIOR_POINTERS - Turns on GC_all_interior_pointers and thus interior
 
 GC_DONT_GC - Turns off garbage collection.  Use cautiously.
 
+GC_USE_ENTIRE_HEAP - Set desired GC_use_entire_heap value at start-up.  See
+                     the similar macro description in README.macros.
+
 GC_TRACE=addr - Intended for collector debugging.  Requires that the collector
                 have been built with ENABLE_TRACE defined.  Causes the debugger
                 to log information about the tracing of address ranges
